@@ -19,7 +19,7 @@
             var result = CSSLint.verify(css, { "important": 1 });
             Assert.areEqual(11, result.messages.length);
             Assert.areEqual("error", result.messages[10].type);
-            Assert.areEqual("Too many !important declarations (10), be careful with rule specificity", result.messages[10].message);
+            Assert.areEqual("Too many !important declarations (10), try to use less than 10 to avoid specifity issues.", result.messages[10].message);
         }
 
     }));
