@@ -3,6 +3,7 @@ Next (not yet released)
 * Updated parser to allow parsing of CSS3 keyframes
 * Fixed error where Rhino CLI could not read directories (fixes #106)
 * Added user-select to vendor prefix rule (fixes #98)
+* Changed wording of !important error to include max usage recommendation (fixes #104)
 
 July 5, 2011 - v0.4.0
 
